fit_predictor/tsp_gls/evaluates/run11/2024-12-22_23-43-39/problem_iter3_response10.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 8, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 13
    nearest_neighbor_i = np.argsort(distance_matrix[i, ~np.isin(np.arange(n), [i])))[1]  # Exclude self
                                                                                  ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 10, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 13
    nearest_neighbor_i = np.argsort(distance_matrix[i, ~np.isin(np.arange(n), [i])))[1]  # Exclude self
                                                                                  ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
